--- a/pkg/admin/gui/front-end/html/status_services_page.html
+++ b/pkg/admin/gui/front-end/html/status_services_page.html
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="/webui/static/css/style.css">
     <script src="/webui/static/javaScript/animationCollapseTasks.js"></script>
     <script src="/webui/static/javaScript/refreshTableServices.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/webui/static/javaScript/syncUpdate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 {{ end }}
 
 {{ define "CoreService" }}
@@ -107,7 +108,12 @@
 
 {{ define "content" }}
     <div class="d-flex align-items-center justify-content-between">
-        <h2 class="mb-0">{{ index .tab "title" }}</h2>
+        <div class="d-flex align-items-center">
+            <h2 class="mb-0">{{ index .tab "title" }}</h2>
+            <span id="sync-update" class="d-none text-dark ms-3" style="transition: opacity 0.3s;">
+                <i class="bi bi-arrow-repeat ms-2 me-2"></i>{{ index .tab "syncUpdate" }}
+            </span>
+        </div>
         <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='home'">
             <i class="bi bi-arrow-left"></i>
         </button>
