--- a/pkg/admin/gui/front-end/html/server_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/server_authentication_page.html
@@ -21,9 +21,12 @@
     {{ if .server }}
         <div class="d-flex align-items-center justify-content-between">
             <h2 class="mb-0">{{ index .tab "title" }} : {{ .server.Name }}</h2>
-            <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='server_management'">
-                <i class="bi bi-arrow-left"></i>
-            </button>
+            <div class="d-flex align-items-center">
+                <span class="text-muted small me-3">{{ index .tab "pathGateway" }}</span>
+                <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='server_management'">
+                    <i class="bi bi-arrow-left"></i>
+                </button>
+            </div>
         </div>
         <hr style="border-top: 1px solid #ababab;">
 
