--- a/pkg/admin/gui/front-end/html/management_usage_rights_rules_page.html
+++ b/pkg/admin/gui/front-end/html/management_usage_rights_rules_page.html
@@ -447,9 +447,12 @@
     {{ if .rule }}
         <div class="d-flex align-items-center justify-content-between">
             <h2 class="mb-0">{{ index .tab "title" }} : {{ .rule.Name }}</h2>
-            <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='transfer_rules_management'">
-                <i class="bi bi-arrow-left"></i>
-            </button>
+            <div class="d-flex align-items-center">
+                <span class="text-muted small me-3">{{ index .tab "pathGateway" }}</span>
+                <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='transfer_rules_management'">
+                    <i class="bi bi-arrow-left"></i>
+                </button>
+            </div>
         </div>
         <hr style="border-top: 1px solid #ababab;">
         
