--- a/pkg/admin/gui/front-end/html/user_management_page.html
+++ b/pkg/admin/gui/front-end/html/user_management_page.html
@@ -20,10 +20,13 @@
     {{ end }}
     <div class="d-flex align-items-center justify-content-between">
         <h2 class="mb-0">{{ index .tab "title" }}</h2>
-        <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='home'">
-          <i class="bi bi-arrow-left"></i>
-        </button>
-      </div>
+        <div class="d-flex align-items-center">
+        <span class="text-muted small me-3">{{ index .tab "pathGateway" }}</span>
+            <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='home'">
+                <i class="bi bi-arrow-left"></i>
+            </button>
+        </div>
+    </div>
     <hr style="border-top: 1px solid #ababab;">
     
     {{ if contains .myPermission.Users "w" }}
